# Shuttle-Management-System

./: .gitignore  Authentication.h  BookingManager.cpp  CMakeLists.txt  Makefile  README.md  Route.cpp  Route.h  ShuttleSystem.cpp  Stop.cpp  Stop.h  TransferManager.cpp  Wallet.h  bookings.txt  error_log.txt  guide.txt  logs.txt  main.cpp  routes.txt  students.txt
.github/workflows/: cmake-multi-platform.yml
include/: Authentication.h  Booking.h  BookingManager.h  Route.h  ShuttleSystem.h  Stop.h  Student.h  TransferManager.h  Wallet.h
src/: Authentication.cpp  Booking.cpp  BookingManager.cpp  Route.cpp  ShuttleSystem.cpp  Stop.cpp  Student.cpp  TransferManager.cpp  Wallet.cpp  main.cpp
